fix: extra padding

--- a/galasa-ui/src/styles/TestRunsPage.module.css
+++ b/galasa-ui/src/styles/TestRunsPage.module.css
@@ -312,7 +312,7 @@
   align-items: center;
   justify-content: space-between;
   padding-right: 3rem;
-  padding-top: 0;
+  height: 64px;
 }
 
 .clickableRow {
